fixing underline spacing and weight

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -29,7 +29,8 @@ body{
        font-weight:bold;
        font-size:20px;
        color:#7c97b7;
-       text-decoration:underline; 
+       text-decoration:none;
+       border-bottom:1px solid #d1dfee; 
       }
       }
       a:hover{
@@ -144,7 +145,8 @@ body{
     a{
       color:#FFF;
       font-weight:800;
-      text-decoration:underline;
+      text-decoration:none;
+      border-bottom: 1px solid #333;
     }
   }
 
